--- a/index.html
+++ b/index.html
@@ -1,71 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neel's Paradise</title>
+	<link rel="shortcut icon" type="image/png" href="BIN/PNG/TS.png">
     <!-- CSS File -->
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>
-        /* Change color for all social icons on hover */
-        .social-icon:hover {
-            color: #43c6ff; /* Replace with your desired hover color */
-        }
-
-        /* Footer social icons hover color */
-        #footer-sections .sqs-svg-icon--wrapper {
-            transition: ease-in-out 300ms;
-        }
-
-        #footer-sections .sqs-svg-icon--wrapper:hover {
-            color: black; /* Change to black */
-        }
-
-        /* Adjustments for video element */
-        video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: auto;
-            z-index: -1;
-            object-fit: cover;
-            display: block;
-        }
-
-        /* Mobile-specific styles */
-        @media screen and (max-width: 768px) {
-            .container {
-                padding-top: 100px; /* Adjust as needed */
-            }
-        }
-    </style>
-    <script>
-        // Function to perform the Thanos snap effect
-        function thanosSnap() {
-            const buttons = document.querySelectorAll('.buttons a');
-            buttons.forEach((button) => {
-                button.addEventListener('click', () => {
-                    // Add your Thanos snap animation logic here
-                    // For example, fade out the button or hide it
-                    button.style.opacity = 0;
-                    setTimeout(() => {
-                        // Redirect to the desired page after 2 seconds
-                        window.location.href = button.getAttribute('href');
-                    }, 2000); // 2000 milliseconds = 2 seconds
-                });
-            });
-        }
-
-        // Call the function when the page loads
-        window.addEventListener('load', thanosSnap);
-    </script>
 </head>
+
 <body>
-    <video autoplay loop muted playsinline>
-        <source src="BIN/BGV.mp4" type="video/mp4">
+    <video autoplay loop muted>
+        <source src="BIN/BGV.mp4">
     </video>
     <nav class="navbar">
         <div class="container">
@@ -92,4 +41,5 @@
         </div>
     </main>
 </body>
+
 </html>
