--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!-- GIF -->
     <div class="loading-gif">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline>
             <source src="BIN/PNG/1.mp4" type="video/mp4">
         </video>
     </div>
