--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
         </video>
     </div>
 
-    <video autoplay loop muted>
-        <source src="BIN/BGV.mp4">
+    <div class="loading-gif" id="loadingGif">
+    <video id="backgroundVideo" loop muted playsinline>
+        <source src="BIN/BGV.mp4" type="video/mp4">
     </video>
+</div>
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">GOKU's Paradise</a>
