--- a/index.html
+++ b/index.html
@@ -40,16 +40,14 @@
 <body>
     <!-- GIF -->
     <div class="loading-gif">
-        <video autoplay loop muted playsinline>
+        <video autoplay loop muted>
             <source src="BIN/PNG/1.mp4" type="video/mp4">
         </video>
     </div>
 
-    <div class="loading-gif" id="loadingGif">
-    <video id="backgroundVideo" loop muted playsinline>
-        <source src="BIN/BGV.mp4" type="video/mp4">
+    <video autoplay loop muted>
+        <source src="BIN/BGV.mp4">
     </video>
-</div>
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">GOKU's Paradise</a>
