--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,49 +9,26 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>
-        /* CSS for loading video */
-        .loading-gif {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #000; /* Change background color to black */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999; /* Ensure it's above other elements */
-        }
-
-        .loading-gif video {
-            width: 200px; /* Adjust the size of the loading video */
-            height: auto;
-        }
-
-        /* Hide the loading GIF after 4 seconds */
-        .hide {
-            display: none;
-        }
-    </style>
 </head>
-
 <body>
     <!-- GIF -->
-	<div class="loading-gif">
-		<img src="BIN/PNG/2.gif" alt="Loading GIF" class="responsive-gif">
-	</div>
+    <div class="loading-gif">
+        <img src="BIN/PNG/2.gif" alt="Loading GIF" class="responsive-gif">
+    </div>
 
-    <video autoplay loop muted playsinline>
+    <video autoplay loop muted playsinline class="responsive-video">
         <source src="BIN/BGV.mp4">
     </video>
+
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">GOKU's Paradise</a>
-            <ul>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="menu-icon"><i class="bi bi-list"></i></label>
+            <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-				<li><a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://github.com/neel0210')">Github</a></li>
-				<li><a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://neel0210.github.io/')">Downloads</a></li>
+                <li><a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://github.com/neel0210')">Github</a></li>
+                <li><a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://neel0210.github.io/')">Downloads</a></li>
             </ul>
         </div>
     </nav>
@@ -64,13 +40,12 @@
                 <p></p>
                 <div class="buttons">
                     <a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://www.instagram.com/neel_0210/')">Instagram</a>
-					<a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'projects.html')">Projects</a>
-					<a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://twitter.com/Neel_0210')">X</a>
+                    <a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'projects.html')">Projects</a>
+                    <a href="#" onclick="showLoadingAndRedirect('BIN/PNG/2.gif', 'https://twitter.com/Neel_0210')">X</a>
                 </div>
             </div>
         </div>
     </main>
-	<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
